producer and refactoring

--- a/make_data/make_data.ipynb
+++ b/make_data/make_data.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import dask.dataframe as dd\n",
     "import pandas as pd\n",
     "import datetime\n",
     "import pickle\n",
@@ -25,32 +26,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "flights = pd.read_csv('../data/flights_head.csv', \n",
+    "flights = dd.read_csv('../data/flights.csv', \n",
     "                      dtype = 'str', \n",
     "                      usecols=['YEAR', 'MONTH', 'DAY', 'DEPARTURE_TIME', 'ARRIVAL_TIME',\n",
     "                               'TAIL_NUMBER', 'FLIGHT_NUMBER', 'ORIGIN_AIRPORT',\n",
-    "                               'DESTINATION_AIRPORT', 'SCHEDULED_DEPARTURE', 'SCHEDULED_ARRIVAL'])"
+    "                               'DESTINATION_AIRPORT', 'SCHEDULED_DEPARTURE', 'SCHEDULED_ARRIVAL']).dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5726566"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(flights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/dask/dataframe/core.py:3096: UserWarning: \n",
+      "You did not provide metadata, so Dask is running your function on a small dataset to guess output types. It is possible that Dask will guess incorrectly.\n",
+      "To provide an explicit output types or to silence this message, please provide the `meta=` keyword, as described in the map or apply function that you are using.\n",
+      "  Before: .apply(func)\n",
+      "  After:  .apply(func, meta=('MONTH', 'object'))\n",
+      "\n",
+      "  warnings.warn(meta_warning(meta))\n",
+      "/opt/conda/lib/python3.7/site-packages/dask/dataframe/core.py:3096: UserWarning: \n",
+      "You did not provide metadata, so Dask is running your function on a small dataset to guess output types. It is possible that Dask will guess incorrectly.\n",
+      "To provide an explicit output types or to silence this message, please provide the `meta=` keyword, as described in the map or apply function that you are using.\n",
+      "  Before: .apply(func)\n",
+      "  After:  .apply(func, meta=('DAY', 'object'))\n",
+      "\n",
+      "  warnings.warn(meta_warning(meta))\n"
+     ]
+    }
+   ],
+   "source": [
+    "flights['departure_dt'] = flights['YEAR'] + flights['MONTH'].apply(pad) + flights['DAY'].apply(pad) + ' ' + flights['DEPARTURE_TIME'].str[:2] + ':' + flights['DEPARTURE_TIME'].str[2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/dask/dataframe/core.py:3096: UserWarning: \n",
+      "You did not provide metadata, so Dask is running your function on a small dataset to guess output types. It is possible that Dask will guess incorrectly.\n",
+      "To provide an explicit output types or to silence this message, please provide the `meta=` keyword, as described in the map or apply function that you are using.\n",
+      "  Before: .apply(func)\n",
+      "  After:  .apply(func, meta=('id', 'object'))\n",
+      "\n",
+      "  warnings.warn(meta_warning(meta))\n"
+     ]
+    }
+   ],
+   "source": [
+    "flights['id'] = flights['departure_dt'] + flights['TAIL_NUMBER'] + flights['FLIGHT_NUMBER'] \n",
+    "flights['id'] = flights['id'].apply(lambda x: hashlib.md5(str(x).encode('utf-8')).hexdigest()   )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "flights['departure_dt'] = flights['YEAR'] + flights['MONTH'].apply(pad) + flights['DAY'].apply(pad) + ' ' + flights['DEPARTURE_TIME'].str[:2] + ':' + flights['DEPARTURE_TIME'].str[2:]\n",
-    "\n",
-    "flights['id'] = flights['departure_dt'] + flights['TAIL_NUMBER'] + flights['FLIGHT_NUMBER'] \n",
-    "flights['id'] = flights['id'].apply(lambda x: hashlib.md5(str(x).encode('utf-8')).hexdigest()   )\n",
-    "\n",
     "flights['departure_dt'] = pd.to_datetime(flights['departure_dt'], format = '%Y%m%d %H:%M', errors='ignore')\n",
     "flights_out = (flights[[ 'id', 'FLIGHT_NUMBER', 'TAIL_NUMBER', 'ORIGIN_AIRPORT', \n",
     "                       'DESTINATION_AIRPORT', 'SCHEDULED_DEPARTURE', 'SCHEDULED_ARRIVAL', 'departure_dt']]\n",
-    "               .dropna())"
+    "               )"
    ]
   },
   {
@@ -247,11 +317,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pickle' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-901dc7f4122a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0marrivals\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'arrivals.pickle'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'wb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflightdict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marrivals\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0marrivals\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pickle' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "arrivals = open('../data/arrivals.pickle', 'wb')\n",
+    "arrivals = open('arrivals.pickle', 'wb')\n",
     "\n",
     "pickle.dump(flightdict, arrivals)\n",
     "\n",
